added slider arrows and blue rectangles to teachers cards

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,700;1,700&family=Roboto:ital@0;1&display=swap" rel="stylesheet">     <title>Fitness</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,700;1,700&family=Roboto:ital@0;1&display=swap&family=Montserrat:ital@1&display=swap" rel="stylesheet">     <title>Fitness</title>
 </head>
 <body>
     <div class="container">
@@ -55,7 +55,15 @@
                         <p class="teachers-name">Мкртычан Всеволод</p>
                         <p class="teachers-xp">Описание опыта тренера</p>
                     </li>
+
                 </ul>
+
+                <div class="slider-control">
+                    <button class="slider-button-previous"><img src="img/slider-arrow-left.svg" alt=""></button>
+                    <p class="slider-counter">1/4</p>
+                    <button class="slider-button-next"><img src="img/slider-arrow-right.svg" alt=""></button>
+                </div>
+
             </div>
         </section>
 
